--- a/default/default.css
+++ b/default/default.css
@@ -40,12 +40,12 @@ sqrt > svg {
 .sqrt-inner {
     display: block;
     padding-left: 0.35em;
-    padding-right: 0.1em;
+    padding-right: 0.15em;
 }
 
 .sqrt-bar {
     display: block;
-    border-top: 0.06em solid #000;
+    border-top: 0.02em solid currentcolor;
     margin-bottom: -0.12em;
     margin-left: 0.27em;
 }
@@ -53,19 +53,26 @@ sqrt > svg {
 
 /* ?frac */
 frac {
-    display: inline;
+    display: inline-block;
     text-align: center;
+    vertical-align: 15%;
 }
 
 .frac-bar {
+    display: block;
     width: 100%;
-    height: 0.25mm;
-    background-color: #000; 
-    margin-top: -0.5mm;
+    height: 0.02em;
+    background-color: currentcolor; 
+    margin-top: 0;
+    margin-bottom: 0.15em;
 }
 
 .frac-up, .frac-down {
     display: inline-block;
+}
+
+.frac-down {
+    vertical-align: top;
 }
 
 
